Moved dmk and imd utils to detanglers/transforms